; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_url.c_test_UrlHash.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/shlwapi/extr_url.c_test_UrlHash.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@pUrlHashA = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [20 x i8] c"UrlHashA not found\0A\00", align 1
@TEST_URL_1 = common dso_local global i32 0, align 4
@TEST_URL_2 = common dso_local global i32 0, align 4
@TEST_URL_3 = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_UrlHash to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_UrlHash() #0 {
  %1 = load i32, i32* @pUrlHashA, align 4
  %2 = icmp ne i32 %1, 0
  br i1 %2, label %5, label %3

3:                                                ; preds = %0
  %4 = call i32 @win_skip(i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str, i64 0, i64 0))
  br label %12

5:                                                ; preds = %0
  %6 = load i32, i32* @TEST_URL_1, align 4
  %7 = call i32 @hash_url(i32 %6)
  %8 = load i32, i32* @TEST_URL_2, align 4
  %9 = call i32 @hash_url(i32 %8)
  %10 = load i32, i32* @TEST_URL_3, align 4
  %11 = call i32 @hash_url(i32 %10)
  br label %12

12:                                               ; preds = %5, %3
  ret void
}

declare dso_local i32 @win_skip(i8*) #1

declare dso_local i32 @hash_url(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
